--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
-  - {name: 🇺🇸 美国-831.7KB/s(Youtube:不良林), server: 167.172.135.97, port: 25453, type: ss, cipher: aes-256-cfb, password: a40ff797db5c4b948cfe5a5234a0e74c}
-  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.13MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
-  - {name: 🇨🇳 台湾-363.3KB/s(Youtube:不良林), server: hinet.okvpn.xyz, port: 12000, type: trojan, password: e1e878cd-bd57-4929-9c41-d23c4acdd7b4, sni: hinet.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.40MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-403.7KB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.44MB/s(Youtube:不良林), server: jj02.nfeng6.pp.ua, port: 39006, type: vmess, uuid: 025f4054-7985-38c3-8f62-6e50f098ad3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-750.9KB/s(Youtube:不良林), server: tanz-unicom.0098dns01in.work, port: 35006, type: vmess, uuid: b83d0e8b-f4e6-3988-b45e-cc96400f0bc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-444.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-363.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-403.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-750.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
