--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
   - {name: 🇫🇷 法国-2.93MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
   - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-864.7KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-702.4KB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
       - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-864.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-702.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
