--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.60MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-875.7KB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
   - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.81MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.03MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-606.9KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-875.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-606.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
